--- a/tour.html
+++ b/tour.html
@@ -272,14 +272,16 @@
                         <h4 class="panel-title">
                             <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne"
                                 aria-expanded="false" aria-controls="collapseOne">
-                                What types of sports events can I find on TicketsMacau?</a>
+                                What types of tours can I find on TicketsMacau?</a>
                         </h4>
                     </div>
                     <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel"
                         aria-labelledby="headingOne">
                         <div class="panel-body">
-                            Our listings feature a variety of sports events, including poker tournaments, racing events,
-                            golf tournaments, and martial arts matches, all held at top venues in Macau.
+                            Our listings include a variety of tours, such as cultural excursions, historical site
+                            visits, scenic
+                            city tours, and unique local experiences, all highlighting different aspects of Macau.
+
                         </div>
                     </div>
                 </div>
@@ -288,13 +290,14 @@
                         <h4 class="panel-title">
                             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
                                 href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                How can I purchase tickets for sports events?</a>
+                                How can I book a tour through TicketsMacau?</a>
                         </h4>
                     </div>
                     <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
                         <div class="panel-body">
-                            You can purchase tickets by following the links provided on our site to the respective
-                            ticketing platforms or directly through event organizers.
+                            You can book tours by following the links provided on our site to the respective tour
+                            operators or directly through their websites.
+
                         </div>
                     </div>
                 </div>
@@ -303,14 +306,15 @@
                         <h4 class="panel-title">
                             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
                                 href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                Are sports event details and schedules always accurate?</a>
+                                Are tour details and availability always up-to-date?</a>
                         </h4>
                     </div>
                     <div id="collapseThree" class="panel-collapse collapse" role="tabpanel"
                         aria-labelledby="headingThree">
                         <div class="panel-body">
-                            We aim to provide up-to-date information, but event details and schedules may change. For
-                            the latest updates, please check directly with the event organizers.</div>
+                            We strive to provide accurate information, but tour details and availability may change. For
+                            the most current information, please check directly with the tour operators.
+                        </div>
                     </div>
                 </div>
                 <div class="panel panel-default">
@@ -318,16 +322,17 @@
                         <h4 class="panel-title">
                             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
                                 href="#collapsefour" aria-expanded="false" aria-controls="collapsefour">
-                                What should I do if I need a refund for a sports event ticket?
+                                What should I do if I need to cancel or modify a tour reservation?
+
                             </a>
                         </h4>
                     </div>
                     <div id="collapsefour" class="panel-collapse collapse" role="tabpanel"
                         aria-labelledby="headingfour">
                         <div class="panel-body">
-                            Refund policies vary by event and ticketing provider. Please review the terms and conditions
-                            at the time of purchase and contact the ticketing provider for assistance with refunds or
-                            exchanges.</div>
+                            Cancellation and modification policies vary by tour operator. Please review the terms and
+                            conditions at the time of booking and contact the tour operator for assistance.
+                        </div>
                     </div>
                 </div>
                 <div class="panel panel-default">
@@ -335,14 +340,15 @@
                         <h4 class="panel-title">
                             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
                                 href="#collapsefive" aria-expanded="false" aria-controls="collapsefive">
-                                How can I stay informed about new sports events and updates?</a>
+                                How can I find out about new tours and updates?</a>
                         </h4>
                     </div>
                     <div id="collapsefive" class="panel-collapse collapse" role="tabpanel"
                         aria-labelledby="headingfive">
                         <div class="panel-body">
-                            Stay updated by subscribing to our newsletter or following our social media channels for the
-                            latest news and announcements on upcoming sports events in Macau.</div>
+                            Stay informed about new tours and updates by subscribing to our newsletter or following our
+                            social media channels for the latest news and announcements on upcoming tours in Macau.
+                        </div>
                     </div>
                 </div>
             </div>
