--- a/index.html
+++ b/index.html
@@ -23,18 +23,21 @@
                     <div class="closebutton"><i class="fa fa-times-circle" aria-hidden="true"></i></div>
                     <ul>
                         <li>
-                            <a href="hotel.html">
-                                Hotels</a>
+                            <a href="exhibitions.html">
+                                Exhibitions</a>
                         </li>
                         <li>
                             <a href="shows.html">
-                               Shows</a>
+                                Shows</a>
                         </li>
                         <li>
-                            <a href="spa.html">Kúpele</a>
+                            <a href="hotel.html">Hotels</a>
                         </li>
                         <li>
-                            <a href="about.html">O nás</a>
+                            <a href="sport.html">Sports</a>
+                        </li>
+                        <li>
+                            <a href="event.html">Events</a>
                         </li>
                     </ul>
                 </div>
