--- a/exhibitions.html
+++ b/exhibitions.html
@@ -47,7 +47,7 @@
     </header>
     <!-- header section start -->
     <!-- banner section start -->
-    <div class="shows_banner">
+    <div class="exhib_banner">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -77,7 +77,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="para_hotel">
-                        <img src="img/asideimage.jpg" alt="Macau">
+                        <img src="img/creative.jpg" alt="Macau">
                     </div>
                 </div>
             </div>
