--- a/exhibitions.html
+++ b/exhibitions.html
@@ -91,7 +91,7 @@
 
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/seikkailu.webp" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/harry.jpg" alt="macau"></div>
                         <div class="together"> <a
                                 href="https://www.londonermacao.com/macau-events-shows/harry-potter-exhibition.html?_ga=2.61142892.1132260017.1723028193-993384100.1723028193">
                                 <h3>Harry Potter™: The Exhibition
@@ -115,7 +115,7 @@
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/taalla.webp" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/teamlab.jpg" alt="macau"></div>
                         <div class="together"> <a
                                 href="https://en.sandsresortsmacao.com/sands-lifestyle/macau-shows/teamlab.html?_gl=1*1chmzqk*_gcl_au*NjUwMTE5ODgyLjE3MjMwMjgxOTI.*_ga*OTkzMzg0MTAwLjE3MjMwMjgxOTM.*_ga_H84668JQMV*MTcyMzAyODE5Mi4xLjEuMTcyMzAyODIxOC4zNC4wLjA.*_ga_CCKE5Z3T7T*MTcyMzAyODE5Mi4xLjEuMTcyMzAyODIxOC4zNC4wLjA.&_ga=2.52853864.1132260017.1723028193-993384100.1723028193">
                                 <h3>TeamLab - SuperNature Macao</h3>
@@ -137,7 +137,7 @@
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/seitseman.jpg" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/chivary.jpg" alt="macau"></div>
                         <div class="together"> <a
                                 href="https://www.mgm.mo/en/cotai/entertainment/Legend-of-Chivalry-MGMXRen-Zhe-Art-Exhibition">
                                 <h3>MGM X Ren Zhe – “Legends of Chivalry” Art Exhibition</h3>
@@ -161,7 +161,7 @@
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/jaaulla.avif" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/pompidou.jfif" alt="macau"></div>
                         <div class="together"> <a
                                 href="https://www.mgm.mo/en/cotai/entertainment/Fantastic-Art-World-from-CENTRE-POMPIDOU">
                                 <h3>Fantastic Art World from CENTRE POMPIDOU: The Plantamouves
