--- a/exhibitions.html
+++ b/exhibitions.html
@@ -192,7 +192,7 @@
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/pubdistus.webp" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/giraffe.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.mgm.mo/en/cotai/entertainment/giraffe-meets-qilin">
                                 <h3>Monumental Digital Art “Giraffe meets Qilin”
 
