--- a/exhibitions.html
+++ b/exhibitions.html
@@ -223,7 +223,7 @@
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/mikael.webp" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/mart.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.mgm.mo/en/cotai/entertainment/arts-and-culture">
                                 <h3>’M ART - Arts and Culture Creative Experience
                                 </h3>
