--- a/exhibitions.html
+++ b/exhibitions.html
@@ -246,7 +246,7 @@
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/puerto.webp" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/sea.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.mgm.mo/en/cotai/entertainment/sea-odyssey">
                                 <h3>Sea Odyssey</h3>
                                 <span>📍MGM Cotai
