--- a/exhibitions.html
+++ b/exhibitions.html
@@ -109,7 +109,7 @@
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.londonermacao.com/macau-events-shows/harry-potter-exhibition.html?_ga=2.61142892.1132260017.1723028193-993384100.1723028193"
-                                class="button_main">Buy Tickets CTA</a>
+                                class="button_main">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
                         </div>
                         <div class="hotel_btn">
                             <a href="https://en.sandsresortsmacao.com/sands-lifestyle/macau-shows/teamlab.html?_gl=1*1chmzqk*_gcl_au*NjUwMTE5ODgyLjE3MjMwMjgxOTI.*_ga*OTkzMzg0MTAwLjE3MjMwMjgxOTM.*_ga_H84668JQMV*MTcyMzAyODE5Mi4xLjEuMTcyMzAyODIxOC4zNC4wLjA.*_ga_CCKE5Z3T7T*MTcyMzAyODE5Mi4xLjEuMTcyMzAyODIxOC4zNC4wLjA.&_ga=2.52853864.1132260017.1723028193-993384100.1723028193"
-                                class="button_main">Buy Tickets CTA</a>
+                                class="button_main">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -155,7 +155,7 @@
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.mgm.mo/en/cotai/entertainment/Legend-of-Chivalry-MGMXRen-Zhe-Art-Exhibition"
-                                class="button_main">Buy Tickets CTA</a>
+                                class="button_main">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -186,7 +186,7 @@
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.mgm.mo/en/cotai/entertainment/Fantastic-Art-World-from-CENTRE-POMPIDOU"
-                                class="button_main">Buy Tickets CTA</a>
+                                class="button_main">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -217,7 +217,7 @@
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.mgm.mo/en/cotai/entertainment/giraffe-meets-qilin"
-                                class="button_main">Buy Tickets CTA</a>
+                                class="button_main">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
