--- a/shows.html
+++ b/shows.html
@@ -79,7 +79,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="para_hotel">
-                        <img src="img/asideimage.jpg" alt="Macau">
+                        <img src="img/showfashion.jpg" alt="Macau">
                     </div>
                 </div>
             </div>
@@ -93,7 +93,7 @@
 
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/seikkailu.webp" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/world.webp" alt="macau"></div>
                         <div class="together"> <a
                                 href="https://www.galaxymacau.com/offers/entertainment/gem-i-am-gloria-world-tour-macau/">
                                 <h3>G.E.M. I AM GLORIA WORLD TOUR</h3>
@@ -111,7 +111,7 @@
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/taalla.webp" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/world.webp" alt="macau"></div>
                         <div class="together"> <a
                                 href="https://www.galaxymacau.com/offers/entertainment/rene-final-call-2024-live-tour-macau/">
                                 <h3>René [Final Call] 2024 Live Tour-Macau</h3>
