--- a/shows.html
+++ b/shows.html
@@ -111,7 +111,7 @@
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="img/world.webp" alt="macau"></div>
+                        <div class="img_transition"><img src="img/final.webp" alt="macau"></div>
                         <div class="together"> <a
                                 href="https://www.galaxymacau.com/offers/entertainment/rene-final-call-2024-live-tour-macau/">
                                 <h3>René [Final Call] 2024 Live Tour-Macau</h3>
@@ -131,7 +131,7 @@
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/seitseman.jpg" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/final.webp" alt="macau"></div>
                         <div class="together"> <a
                                 href="https://www.galaxymacau.com/offers/entertainment/tomorrow-x-together-world-tour-macau/">
                                 <h3>TOMORROW X TOGETHER WORLD TOUR <ACT:PROMISE> IN MACAU </h3>
