--- a/shows.html
+++ b/shows.html
@@ -131,7 +131,7 @@
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="img/final.webp" alt="macau"></div>
+                        <div class="img_transition"><img src="img/more.webp" alt="macau"></div>
                         <div class="together"> <a
                                 href="https://www.galaxymacau.com/offers/entertainment/tomorrow-x-together-world-tour-macau/">
                                 <h3>TOMORROW X TOGETHER WORLD TOUR <ACT:PROMISE> IN MACAU </h3>
@@ -150,7 +150,7 @@
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/jaaulla.avif" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/idol.webp" alt="macau"></div>
                         <div class="together"> <a
                                 href="https://www.galaxymacau.com/offers/entertainment/2024-gi-dle-world-tour-idol-macau/">
                                 <h3>2024 (G)I-DLE WORLD TOUR [iDOL] IN MACAU
@@ -175,7 +175,7 @@
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/pubdistus.webp" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/zen.jpg" alt="macau"></div>
                         <div class="together"> <a
                                 href="https://www.klook.com/event-detail/101024001-2024-the-boyz-macau/?spm=Event_Vertical.AllEvent_LIST&clickId=0283573a4f">
                                 <h3>2024 THE BOYZ WORLD TOUR : ZENERATION II in MACAU
