--- a/shows.html
+++ b/shows.html
@@ -215,7 +215,7 @@
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/puerto.webp" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/stray.jpg" alt="macau"></div>
                         <div class="together"> <a
                                 href="https://www.klook.com/event-detail/101025451-2024-straykids-macau/?spm=Event_Vertical.AllEvent_LIST&clickId=401f9150ef">
                                 <h3>Stray Kids Concert 2024 Macau｜Stray Kids World Tour
