--- a/hotel.html
+++ b/hotel.html
@@ -94,7 +94,7 @@
 
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/seikkailu.webp" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/venetianmacao.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.venetianmacao.com/">
                                 <h3>The Venetian Macao
                                 </h3>
