--- a/hotel.html
+++ b/hotel.html
@@ -112,7 +112,7 @@
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/taalla.webp" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/dreams.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.cityofdreamsmanila.com/en">
                                 <h3>City of Dreams</h3>
                                 <ul>
