--- a/hotel.html
+++ b/hotel.html
@@ -129,7 +129,7 @@
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/seitseman.jpg" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/wynn.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.wynnresortsmacau.com/en/wynn-palace">
                                 <h3>Wynn Palace</h3>
                                 <ul>
