--- a/hotel.html
+++ b/hotel.html
@@ -106,7 +106,7 @@
                                 </ul>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.venetianmacao.com/" class="button_main">Buy Tickets CTA</a>
+                            <a href="https://www.venetianmacao.com/" class="button_main">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -123,7 +123,7 @@
                                 </ul>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.cityofdreamsmanila.com/en" class="button_main">Buy Tickets CTA</a>
+                            <a href="https://www.cityofdreamsmanila.com/en" class="button_main">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -139,8 +139,7 @@
                                 </ul>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.wynnresortsmacau.com/en/wynn-palace" class="button_main">Buy Tickets
-                                CTA</a>
+                            <a href="https://www.wynnresortsmacau.com/en/wynn-palace" class="button_main">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -156,8 +155,7 @@
                                 </ul>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.wynnresortsmacau.com/en/wynn-macau" class="button_main">Buy Tickets
-                                CTA</a>
+                            <a href="https://www.wynnresortsmacau.com/en/wynn-macau" class="button_main">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -173,7 +171,7 @@
                                 </ul>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.mgm.mo/en/cotai" class="button_main">Buy Tickets CTA</a>
+                            <a href="https://www.mgm.mo/en/cotai" class="button_main">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -191,7 +189,7 @@
                             </a>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.mgm.mo/" class="button_main">Buy Tickets CTA</a>
+                            <a href="https://www.mgm.mo/" class="button_main">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -208,13 +206,13 @@
 
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.grandlisboa.com/en" class="button_main">Buy Tickets CTA</a>
+                            <a href="https://www.grandlisboa.com/en" class="button_main">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/puerto.webp" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/wynnmacao.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.fourseasons.com/macau/">
                                 <h3>Four Seasons Hotel Macau, Cotai Strip
                                 </h3>
@@ -227,7 +225,7 @@
 
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.fourseasons.com/macau/" class="button_main">Buy Tickets CTA</a>
+                            <a href="https://www.fourseasons.com/macau/" class="button_main">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -245,7 +243,7 @@
 
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.parisianmacao.com/" class="button_main">Buy Tickets CTA</a>
+                            <a href="https://www.parisianmacao.com/" class="button_main">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
