--- a/hotel.html
+++ b/hotel.html
@@ -145,7 +145,7 @@
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/jaaulla.avif" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/wynnmacao.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.wynnresortsmacau.com/en/wynn-macau">
                                 <h3>Wynn Macau</h3>
                                 <ul>
@@ -161,7 +161,7 @@
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/pubdistus.webp" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/cotai.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.mgm.mo/en/cotai">
                                 <h3>MGM Cotai</h3>
                                 <ul>
