--- a/hotel.html
+++ b/hotel.html
@@ -177,7 +177,7 @@
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/mikael.webp" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/mgmmacao.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.mgm.mo/">
                                 <h3>MGM Macau
                                 </h3>
