--- a/hotel.html
+++ b/hotel.html
@@ -195,7 +195,7 @@
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/puerto.webp" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/lisoba.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.grandlisboa.com/en">
                                 <h3>Grand Lisboa</h3>
                                 <ul>
