--- a/hotel.html
+++ b/hotel.html
@@ -212,7 +212,7 @@
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="img/wynnmacao.jpg" alt="macau"></div>
+                        <div class="img_transition"><img src="img/fourseasons.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.fourseasons.com/macau/">
                                 <h3>Four Seasons Hotel Macau, Cotai Strip
                                 </h3>
