--- a/hotel.html
+++ b/hotel.html
@@ -231,7 +231,7 @@
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/puerto.webp" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/parisian.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.parisianmacao.com/">
                                 <h3>The Parisian Macao</h3>
                                 <ul>
