--- a/sport.html
+++ b/sport.html
@@ -61,7 +61,7 @@
     </div>
     <!-- banner section end -->
     <!-- below section start -->
-    <div class="below_banner">
+    <div class="sports_banner">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
