--- a/sport.html
+++ b/sport.html
@@ -77,7 +77,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="para_hotel">
-                        <img src="img/asideimage.jpg" alt="Macau">
+                        <img src="img/sportaside.jpg" alt="Macau">
                     </div>
                 </div>
             </div>
@@ -91,7 +91,7 @@
 
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/seikkailu.webp" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/prix.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.macau.grandprix.gov.mo/en/ticket-info">
                                 <h3>Macau Grand Prix</h3>
                                 <span>📍 Grand Lisboa</span>
@@ -104,8 +104,7 @@
                             </p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.macau.grandprix.gov.mo/en/ticket-info" class="button_main">Buy Tickets
-                                CTA</a>
+                            <a href="https://www.macau.grandprix.gov.mo/en/ticket-info" class="button_main">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
