--- a/sport.html
+++ b/sport.html
@@ -110,7 +110,7 @@
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/taalla.webp" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/l.jfif" alt="macau"></div>
                         <div class="together"> <a
                                 href="https://worldsmarathons.com/marathon/macau-international-marathon">
                                 <h3>Macau Galaxy Entertainment International Marathon</h3>
