--- a/sport.html
+++ b/sport.html
@@ -129,7 +129,7 @@
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/seitseman.jpg" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/grand.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.macau.grandprix.gov.mo/en/">
                                 <h3>Macau Grand Prix</h3>
                                 <span>📍 Macau Grand Prix Circuit</span>
