--- a/sport.html
+++ b/sport.html
@@ -185,7 +185,7 @@
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/mikael.webp" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/volley.jpeg" alt="macau"></div>
                         <div class="together"> <a href="https://www.gov.mo/en/news/332232/">
                                 <h3>Macau International Beach Volleyball Tournament
                                 </h3>
