--- a/sport.html
+++ b/sport.html
@@ -203,7 +203,7 @@
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/puerto.webp" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/boxing.jpg" alt="macau"></div>
                         <div class="together"> <a
                                 href="http://www.asbcnews.org/macau-issued-its-boxing-plans-for-2024/">
                                 <h3>Macau International Boxing Championship
