--- a/sport.html
+++ b/sport.html
@@ -224,7 +224,7 @@
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/puerto.webp" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/carsport.jpg" alt="macau"></div>
                         <div class="together"> <a
                                 href="https://www.wynnresortsmacau.com/en/wynn-signature/2024-hypercar-exhibition">
                                 <h3>SJM Macao Open</h3>
