--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="para_hotel">
-                        <img src="img/asideimage.jpg" alt="Macau">
+                        <img src="img/asideimg.jpg" alt="Macau">
                     </div>
                 </div>
             </div>
