--- a/event.html
+++ b/event.html
@@ -47,7 +47,7 @@
     </header>
     <!-- header section start -->
     <!-- banner section start -->
-    <div class="home_banner">
+    <div class="blog_banner">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -59,156 +59,6 @@
         </div>
     </div>
     <!-- banner section end -->
-    <!-- below section start -->
-    <div class="below_banner">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="para_hotel">
-                        <p>TicketsMacau is your premier source for discovering the latest and most exciting events in
-                            Macau. From thrilling casino tournaments and captivating theatrical performances to
-                            electrifying concerts, we provide a curated selection of events hosted in the city’s top
-                            casino
-                            hotels. Stay updated with the most current information and secure your tickets to experience
-                            the best of Macau’s entertainment scene. Let TicketsMacau guide you to unforgettable
-                            moments in Asia's entertainment capital.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="para_hotel">
-                        <img src="img/asideimg.jpg" alt="Macau">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- below section end -->
-
-    <!-- associated section start -->
-    <div class="associated">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4 col-md-6 col-12">
-                    <div class="flex_box Shows">
-                        <div class="flex_cont"><a href="">
-                                <h3>Shows
-                                </h3>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-12">
-                    <div class="flex_box Exhi">
-                        <div class="flex_cont">
-                            <a href="">
-                                <h3>Exhibitions</h3>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-12">
-                    <div class="flex_box Hotel">
-                        <div class="flex_cont"><a href="">
-                                <h3>Hotels</h3>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-12">
-                    <div class="flex_box Sport">
-                        <div class="flex_cont">
-                            <a href="">
-                                <h3>Sports</h3>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-12">
-                    <div class="flex_box Tour">
-                        <div class="flex_cont"><a href="">
-                                <h3>Tours</h3>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- associated section end -->
-    <!-- events section start -->
-    <div class="events">
-        <div class="container">
-            <div class="event_box">
-                <div class="col-12">
-                    <h2>Featured Events</h2>
-                </div>
-                <div class="row event_inner">
-                    <div class="col-lg-5 even">
-                        <img src="img/carrace.jpg" alt="macau">
-                    </div>
-                    <div class="col-lg-7 text">
-                        <h3>Experience The Thrill Of The Race</h3>
-                        <a href="https://www.macau.grandprix.gov.mo/en/ticket-info"><span>Macau Grand Prix</span></a>
-                        <p>One of the most famous motorsport events in Asia,featuring Formula 3 and touring car races.
-                            The Grand Prix is a major attraction, and the Grand Lisboa provides key hospitality and
-                            entertainment.
-                        </p>
-                    </div>
-                </div>
-                <div class="row event_inner">
-                    <div class="col-lg-5 even">
-                        <img src="img/temple.jpg" alt="macau">
-                    </div>
-                    <div class="col-lg-7 text">
-                        <h3>Explore The Magic Of China</h3>
-                        <a href="https://www.china-roads.com/travel/macao/village-taipa/"><span>Taipa Village</span></a>
-                        <p>A cultural and historical area
-                            with traditional Portuguese
-                            architecture, local shops,
-                            and eateries. It’s a great
-                            place to explore Macau’s
-                            heritage and sample local
-                            cuisine.
-                        </p>
-                    </div>
-                </div>
-                <div class="row event_inner">
-                    <div class="col-lg-5 even">
-                        <img src="img/armor.jpg" alt="macau">
-                    </div>
-                    <div class="col-lg-7 text">
-                        <h3>Marvel At The Wonder Of Art</h3>
-                        <a
-                            href="https://www.mgm.mo/en/cotai/entertainment/Legend-of-Chivalry-MGMXRen-Zhe-Art-Exhibition"><span>“Legends
-                                of Chivalry” Art
-                                Exhibition</span></a>
-                        <p>MGM joins forces with
-                            renowned contemporary
-                            Chinese artist Ren Zhe to
-                            present art exhibition
-                            echoing the theme of
-                            “Legends of Chivalry”,
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- events section end -->
-    <section class="newsletter">
-        <div class="container">
-            <div class="newsletter-wrap">
-                <div class="newsletter-heading">
-                    <h4>Sign Up For Our Newsletter To Stay Up To Date With All Things Macau!</h4>
-                </div>
-                <div class="news-form">
-                    <input type="email" placeholder="Fill in your email">
-                    <button>Sign Up</button>
-                </div>
-            </div>
-        </div>
-    </section>
     <!-- about us section start -->
     <div class="detail">
         <div class="container">
